--- a/2024/09/04.md
+++ b/2024/09/04.md
@@ -21,8 +21,9 @@ reference link: https://computingforgeeks.com/run-linux-terminal-on-web-browser-
 Decision:
 
 ************
-1.
-2.
-3.
-4.
-5.
+1.bibliography of OS lab
+2.convert os labs like openDSA book for research(catechism)
+3.have a narrative for the content. introduce the apparatus first and then build upon it.
+4.dig out the paper regarding smol-tutor.xyz
+5.learn how to integrate linux terminal using wetty using the reference link in discussions(9) and create a Demo.
+6.the terminal needs to be implemented inside the book.
