--- a/2024/09/04.md
+++ b/2024/09/04.md
@@ -27,3 +27,9 @@ Decision:
 4.dig out the paper regarding smol-tutor.xyz
 5.learn how to integrate linux terminal using wetty using the reference link in discussions(9) and create a Demo.
 6.the terminal needs to be implemented inside the book.
+
+
+Result:
+1.Created a bibliography of OS lab.
+4.Found the paper regarding smol-tutor.xyz
+5.Terminal demo created using "xterm.js". wetty did not work.
